win visualc proj updated

--- a/platforms/VisualC/PF_Prototype_v0.vcxproj
+++ b/platforms/VisualC/PF_Prototype_v0.vcxproj
@@ -21,9 +21,12 @@
   <ItemGroup>
     <ClCompile Include="..\..\external\glad\glad.c" />
     <ClCompile Include="..\..\src\engine\backend\CommandArgs.cpp" />
+    <ClCompile Include="..\..\src\engine\backend\OBJLoader.cpp" />
     <ClCompile Include="..\..\src\engine\renderer\DX9Renderer.cpp" />
+    <ClCompile Include="..\..\src\engine\renderer\ModelRenderer.cpp" />
     <ClCompile Include="..\..\src\engine\renderer\OGLRenderer.cpp" />
     <ClCompile Include="..\..\src\engine\renderer\RendererInit.cpp" />
+    <ClCompile Include="..\..\src\engine\renderer\Shader.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
